CardBuilder 및 scoreCalculator 클래스 생성. is_where 변수 통일성을 위해 card_where로 변경

--- a/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
+++ b/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="Card.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="scoreCalculator.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cardBuilder.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="scoreCalculator.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cardBuilder.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
