--- a/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
+++ b/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
@@ -18,13 +18,16 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Card.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="scoreCalculator.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cardBuilder.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Card.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Deck.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
