--- a/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
+++ b/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="cardBuilder.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="player.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.h">
@@ -36,6 +39,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="cardBuilder.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="player.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
