card.h iostream 삭제 및 chs와 병합 준비

--- a/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj
+++ b/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="Card.h" />
     <ClInclude Include="cardBuilder.h" />
+    <ClInclude Include="Deck.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="scoreCalculator.h" />
   </ItemGroup>
