--- a/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
+++ b/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
@@ -44,5 +44,11 @@
     <ClInclude Include="cardBuilder.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="player.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Deck.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
