--- a/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
+++ b/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Deck.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.h">
@@ -39,6 +42,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="cardBuilder.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="player.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Deck.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
