--- a/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj
+++ b/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="cardBuilder.cpp" />
+    <ClCompile Include="functions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scoreCalculator.cpp" />
     <ClCompile Include="Deck.cpp" />
@@ -150,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="Card.h" />
     <ClInclude Include="cardBuilder.h" />
+    <ClInclude Include="functions.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="scoreCalculator.h" />
     <ClInclude Include="Deck.h" />
