--- a/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj
+++ b/OOD_TermProject_Gostop/OOD_TermProject_Gostop.vcxproj
@@ -144,7 +144,7 @@
     <ClCompile Include="cardBuilder.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scoreCalculator.cpp" />
-    <ClCompile Include="Deck.cpp" />
+    <ClCompile Include="GameSet.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -152,7 +152,7 @@
     <ClInclude Include="cardBuilder.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="scoreCalculator.h" />
-    <ClInclude Include="Deck.h" />
+    <ClInclude Include="GameSet.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
